--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/host-web-app/node_modules
+/host-web-app/.pnp
+host-web-app/.pnp.js
 /www/node_modules
 /www/.pnp
 www/.pnp.js
 
 # testing
+/host-web-app/coverage
 /www/coverage
 
 # next.js
@@ -13,6 +17,7 @@ www/.pnp.js
 /www/out/
 
 # production
+/host-web-app/build
 /www/build
 
 # misc
