remove aws-exports.js from git

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /host-web-app/build/
 /host-web-app/dist/
 /host-web-app/node_modules/
+/host-web-app/src/aws-exports.js
 /host-web-app/awsconfiguration.json
 /host-web-app/amplifyconfiguration.json
 /host-web-app/amplify-build-config.json
@@ -55,7 +56,8 @@ www/.pnp.js
 .env.development.local
 .env.test.local
 .env.production.local
-.env
+.env.staging
+.env.production
 
 # vercel
 .vercel
