amplify graphql api  added

--- a/host-web-app/amplify/backend/backend-config.json
+++ b/host-web-app/amplify/backend/backend-config.json
@@ -39,5 +39,22 @@
       ],
       "customAuth": false
     }
+  },
+  "api": {
+    "host": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authuponHost"
+            }
+          },
+          "additionalAuthenticationProviders": []
+        }
+      }
+    }
   }
 }
