adds lead storage dynamo table

--- a/host-web-app/amplify/backend/backend-config.json
+++ b/host-web-app/amplify/backend/backend-config.json
@@ -56,5 +56,11 @@
         }
       }
     }
+  },
+  "storage": {
+    "leads": {
+      "service": "DynamoDB",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
