creates leads table, contact api with new-host endpoint and submitContact lambda

--- a/host-web-app/amplify/backend/backend-config.json
+++ b/host-web-app/amplify/backend/backend-config.json
@@ -4,6 +4,21 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "submitContact": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "storage",
+          "resourceName": "leads",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        }
+      ]
     }
   },
   "auth": {
@@ -55,6 +70,20 @@
           "additionalAuthenticationProviders": []
         }
       }
+    },
+    "contact": {
+      "service": "API Gateway",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "submitContact",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        }
+      ]
     }
   },
   "storage": {
