--- a/host-web-app/package.json
+++ b/host-web-app/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "aws-amplify": "^3.3.22",
+    "bootstrap": "^4.6.0",
     "env-cmd": "^10.1.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
