--- a/www/package.json
+++ b/www/package.json
@@ -14,9 +14,9 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "autoprefixer": "10.0.2",
-    "postcss": "8.1.7",
-    "tailwindcss": "^2.0.2"
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.4"
   },
   "license": "MIT"
 }
